<resources>
    <string name="app_name">BillBalancer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bills_title">Bills</string>
    <string name="title_activity_bill_list">BillListActivity</string>

    <string name="bill_name_input">Bill name</string>
    <string name="bill_total_input">Total</string>
    <string name="bill_date_input">Date</string>
    <string name="bill_add_part">Add bill</string>
    <string name="bill_create_date">Create Date</string>
    <string name="add_button">add button</string>
    <string name="item_save_button">item save button</string>

    <string name="participants_nav_title">Participants</string>
    <string name="participants_name_input">Participant name</string>
</resources>
