<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_save_button"
            android:layout_gravity="center|right"
            android:src="@mipmap/ic_done_white_48dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/item_save_button"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_remove_button"
            android:src="@mipmap/ic_delete_white_48dp"
            android:layout_gravity="center|right"
            android:contentDescription="@string/add_button"
            android:adjustViewBounds="false"
            android:layout_margin="12dp"
            android:background="@color/colorPrimary"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bill_name"
            android:inputType="text"
            android:hint="@string/bill_name_input"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/bill_total"
            android:hint="@string/bill_total_input"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/bill_create_date"
            android:layout_weight="1"
            android:hint="@string/bill_create_date"
            android:editable="false"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_add_part"
        android:id="@+id/bill_add_part"/>

</LinearLayout>