<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_save_button"
        android:layout_gravity="center|right"
        android:src="@mipmap/ic_done_white_48dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/item_save_button"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_remove_button"
        android:src="@mipmap/ic_delete_white_48dp"
        android:layout_gravity="center|right"
        android:contentDescription="@string/add_button"
        android:adjustViewBounds="false"
        android:layout_margin="12dp"
        android:background="@color/colorPrimary"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/participant_name"
            android:inputType="text"
            android:hint="@string/participants_name_input"/>
    </LinearLayout>

</LinearLayout>